# cogni-flow

./: README.md
agent/: pyproject.toml
agent/my_agent/: agent.py  demo.py
ui/: package.json  pnpm-lock.yaml
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/api/copilotkit/: route.ts
ui/components/: chat-input.tsx  chat-interface.tsx  chat-message.tsx  sidebar.tsx  wrapper.tsx
